kustomization/overlays/experimental/atuin/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: atuin-ingress
spec:
  rules:
    - host: atuin.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: atuin-svc
                port:
                  name: web
            path: /
            pathType: Prefix
